# dummyapi

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: rust.yml
dummy-api/: Cargo.toml  Dockerfile  README.md
dummy-api/src/: auth.rs  course.rs  handlers.rs  lib.rs  main.rs  models.rs  profile.rs  store.rs  topic.rs
dummy-api/tests/: api_tests.rs  course_api_tests.rs  profile_api_tests.rs
dummy-server/: Cargo.toml
src/: auth.rs  config.rs  course.rs  handlers.rs  lib.rs  main.rs  models.rs  store.rs  topic.rs
tests/: auth_api_tests.rs  topic_api_tests.rs
