[package]
name = "dummy-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
hex = "0.4.3"
http = "0.2.9"
itertools = "0.10.5"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
